GG-934. Fixed image error not showing correctly in edit question.

--- a/app/styles/components/content/questions/_gru-question-edit.scss
+++ b/app/styles/components/content/questions/_gru-question-edit.scss
@@ -13,6 +13,12 @@
     margin-top: 35px;
     max-height: 150px;
     max-width: 125px;
+    &.picker-error {
+      margin-bottom: 50px;
+    }
+    .validation {
+      bottom: -55px;
+    }
     img {
       margin: 0px 5px;
       padding: 5px 0px;
